fix overflow scroll issue

--- a/src/main.css
+++ b/src/main.css
@@ -3,5 +3,6 @@
 :root,
 body,
 #root {
+  min-width: 100%;
   min-height: 100dvh;
 }
